--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,96 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAazNRorOWLXof-df2Q15jpGtTDnMHMVmkqw&s");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1.title {
+  text-align: center;
+  color: black;
+  letter-spacing: 2px;
+}
+
+h1.todo-header {
+  background: #e92929;
+  color: rgb(8, 8, 8);
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 400;
+}
+div#container {
+  margin-top: 150;
+  width: 500px;
+  margin: 0 auto;
+  border: 2px solid skyblue;
+  background: #f7f7f7;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+}
+
+ul {
+  cursor: pointer;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  background: #fff;
+  padding-left: 10px;
+  line-height: 2em;
+  margin: 0;
+  color: #666;
+}
+
+li:nth-child(2n) {
+  background: #f7f7f7;
+}
+
+li.clicked {
+  color: gray;
+  text-decoration: line-through;
+}
+
+input#addToDo {
+  font-size: 18px;
+  color: #2980b9;
+  background: #b7eeff;
+  border: none;
+  width: 100%;
+  padding: 10px 10px 10px 20px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-border-box: border-box;
+}
+
+input#addToDo:focus {
+  background: white;
+  border: 2px solid skyblue;
+  outline: none;
+  transition: 0.1s;
+}
+
+i.fa-trash {
+  margin: 7px;
+}
+
+span {
+  background: tomato;
+  height: 35px;
+  width: 0;
+  margin-right: 10px;
+  margin-left: -10px;
+  text-align: center;
+  display: inline-block;
+  color: white;
+  opacity: 0;
+  transition: 0.2s linear;
+}
+
+li:hover span {
+  opacity: 1;
+  width: 40px;
+}
